--- a/authservices/pom.xml
+++ b/authservices/pom.xml
@@ -100,6 +100,11 @@
         <optional>true</optional>
     </dependency>
 
+    <dependency>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+    </dependency>
+
     <!-- Testing -->
     <dependency>
         <groupId>org.springframework.boot</groupId>
@@ -131,16 +136,6 @@
 
     <build>
         <plugins>
-            <plugin>
-                <groupId>com.google.cloud.tools</groupId>
-                <artifactId>jib-maven-plugin</artifactId>
-                <version>3.4.2</version>
-                <configuration>
-                    <to>
-                        <image>prabal864/account-service:1.0.0</image>
-                    </to>
-                </configuration>
-            </plugin>
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -172,13 +167,13 @@
             <plugin>
                 <groupId>com.google.cloud.tools</groupId>
                 <artifactId>jib-maven-plugin</artifactId>
-                <version>3.4.6</version>
+                <version>3.5.1</version>
                 <configuration>
                     <from>
                         <image>prabal864/java-spring:base-with-curl</image>
                     </from>
                     <to>
-                        <image>prabal864/livereconai:auth-v2</image>
+                        <image>prabal864/livereconai:auth-P1</image>
                     </to>
                 </configuration>
             </plugin>
