--- a/gatewayserver/pom.xml
+++ b/gatewayserver/pom.xml
@@ -135,13 +135,13 @@
             <plugin>
                 <groupId>com.google.cloud.tools</groupId>
                 <artifactId>jib-maven-plugin</artifactId>
-                <version>3.4.6</version>
+                <version>3.5.1</version>
                 <configuration>
                     <from>
                         <image>prabal864/java-spring:base-with-curl</image>
                     </from>
                     <to>
-                        <image>prabal864/livereconai:gateway-v3</image>
+                        <image>prabal864/livereconai:gateway-P1</image>
                     </to>
                 </configuration>
             </plugin>
