Enhance RAG service integration, update CORS and security, and refactor deployment configs
- Add endpoint and service logic to forward prompts to RAG service and return AI responses
- Send transactions to RAG service asynchronously after saving to DynamoDB
- Update CORS configuration for broader origin and header support
- Refine security config to better handle public endpoints and OPTIONS requests
- Improve JWT filter to skip authentication for public paths and log relevant events
- Adjust TransactionRepository for configurable batch timeouts and thread handling
- Update service URLs for inter-service communication in gateway and transaction services
- Refactor Kubernetes and Docker Compose configs for streamlined deployment and resource usage
- Update Docker image tags in pom.xml for account, auth, and transaction services
- Add readiness and liveness probes to Keycloak deployment
- Improve logging for authentication attempts and errors

--- a/accountservice/pom.xml
+++ b/accountservice/pom.xml
@@ -144,7 +144,7 @@
                         <image>prabal864/java-spring:base-with-curl</image>
                     </from>
                     <to>
-                        <image>prabal864/livereconai:account-P1</image>
+                        <image>prabal864/livereconai:account-T3</image>
                     </to>
                 </configuration>
             </plugin>
