--- a/authservices/pom.xml
+++ b/authservices/pom.xml
@@ -173,7 +173,7 @@
                         <image>prabal864/java-spring:base-with-curl</image>
                     </from>
                     <to>
-                        <image>prabal864/livereconai:auth-P1</image>
+                        <image>prabal864/livereconai:auth-T2</image>
                     </to>
                 </configuration>
             </plugin>
