--- a/transactionservice/pom.xml
+++ b/transactionservice/pom.xml
@@ -126,7 +126,7 @@
                     <image>prabal864/java-spring:base-with-curl</image>
                 </from>
                 <to>
-                    <image>prabal864/livereconai:transaction-P1</image>
+                    <image>prabal864/livereconai:transaction-T4</image>
                 </to>
             </configuration>
             </plugin>
