--- a/kubernetes/microservices/keycloak.yaml
+++ b/kubernetes/microservices/keycloak.yaml
@@ -80,7 +80,20 @@ spec:
             requests:
               memory: "512Mi"
               cpu: "500m"
-
+          readinessProbe:
+            httpGet:
+              path: /health/ready
+              port: 8070
+            initialDelaySeconds: 60
+            periodSeconds: 10
+            timeoutSeconds: 5
+          livenessProbe:
+            httpGet:
+              path: /health/live
+              port: 8070
+            initialDelaySeconds: 90
+            periodSeconds: 30
+            timeoutSeconds: 5
 
 ---
 apiVersion: v1
