--- a/kubernetes/microservices/postgres.yaml
+++ b/kubernetes/microservices/postgres.yaml
@@ -1,19 +1,5 @@
 ---
 apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: postgres-init-script
-  namespace: default
-data:
-  init.sql: |
-    -- Create keycloak user and database
-    CREATE USER keycloak WITH PASSWORD 'keycloak123';
-    CREATE DATABASE keycloak;
-    GRANT ALL PRIVILEGES ON DATABASE keycloak TO keycloak;
-    ALTER DATABASE keycloak OWNER TO keycloak;
-
----
-apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: postgres-pvc
@@ -60,14 +46,12 @@ spec:
                   name: microservices-secret
                   key: POSTGRES_PASSWORD
             - name: POSTGRES_DB
-              value: postgres
+              value: keycloak
             - name: PGDATA
               value: /var/lib/postgresql/data/pgdata
           volumeMounts:
             - name: postgres-storage
               mountPath: /var/lib/postgresql/data
-            - name: init-script
-              mountPath: /docker-entrypoint-initdb.d
           resources:
             limits:
               memory: "1Gi"
@@ -97,9 +81,6 @@ spec:
         - name: postgres-storage
           persistentVolumeClaim:
             claimName: postgres-pvc
-        - name: init-script
-          configMap:
-            name: postgres-init-script
 
 ---
 apiVersion: v1
